frontend/scss/molecules/_m-article-header.scss
/* ... */
.m-article-header .date {
  @include tucked-margin-top($f-secondary, ('xsmall': 72, 'medium+': 96));
}

.m-article-header--editorial .date {
  display: none;
}

.m-article-header .type {
  @include tucked-align-top($f-tag, 'xsmall');
  order: 0;

  @include breakpoint('small+') {
    @include tucked-margin-top($f-tag, ('xsmall': 16), 'small');
  }

  @include breakpoint('medium+') {
    @include tucked-align-top($f-tag, 'medium');
  }

  @include breakpoint('large+') {
    @include tucked-align-top($f-tag, 'large');
    position: absolute;
    left: 0;
    top: 12px;
  }

  @include breakpoint('xlarge') {
    @include tucked-align-top($f-tag, 'xlarge');
  }
}

.m-article-header__info-trigger {
  display: block;
  position: absolute;
  right: 0;
  width: 28px;
  height: 28px;
  padding: 0;
  border: 0 none;
  border-radius: 50%;
  background-color: rgba($color__black, .7);
  color: $color__white;
  line-height: 28px;
  text-align: center;
  cursor: pointer;
  transition: opacity .15s;
}

.m-article-header__info-trigger:hover,
.m-article-header__info-trigger:focus,
.m-article-header__info-trigger:active {
  background-color: rgba($color__black, .9);
  color: $color__white;
}

.m-article-header__info-trigger::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

.m-article-header__info-trigger svg {
  position: relative;
  top: -1px;
}

.m-article-header__info {
  position: absolute;
  left: 0;
  right: 0;
  width: 100%;
  padding: 12px 16px 16px;
  border: 0 none;
  border-radius: $border-radius;
  background-color: rgba($color__black, .7);
  transition: opacity .15s;
  overflow: hidden;

  &[aria-hidden="true"] {
    height: 0;
    width: 0;
    padding: 0;
    opacity: 0;
  }

  @supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
  }

  @include breakpoint('small+') {
    left: auto;
    width: auto;
    max-width: colspan(38, small);
  }

  @include breakpoint('medium+') {
    width: auto;
    max-width: colspan(23, medium);
    padding: 16px 20px 20px;
  }

  @include breakpoint('large+') {
    max-width: colspan(18, large);
  }

  @include breakpoint('xlarge') {
    max-width: colspan(18, xlarge);
  }
}

.m-article-header__info .f-caption {
  @include tucked-align-top($f-caption);
  color: $color__white;
}


.m-article-header--feature {
  padding-top: 0;

  @include breakpoint('large+') {
    padding-top: 0;
    padding-right: 0;
    padding-left: 0;
  }
}

.m-article-header--feature .date.f-previewdate {
  margin-top: 44px;
  margin-bottom: -74px;
  border-bottom: 2px solid #6f2562;
  padding-bottom: 10px;
  width: fit-content;

  @include breakpoint('small') {
    margin-top: 34px;
    margin-bottom: -64px;
    border-bottom: 1px solid #6f2562;
  }

  @include breakpoint('xsmall') {
    margin-top: 34px;
    margin-bottom: -50px;
    border-bottom: 1px solid #6f2562;
  }
}

.m-article-header--feature .m-article-header__img {
  position: relative;
  left: 50%;
  width: 100vw;
  height: 95vh;
  margin-left: -50vw;
}

.m-article-header--feature .m-article-header__img + .m-article-header__img {
  position: absolute;
  top: 0;
}

@supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports not (clip-path: inset(0 0 0 0)) {
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] {
    display: none;
  }
}
@supports (not (backdrop-filter: blur(5px))) and (not (-webkit-backdrop-filter: blur(5px))) and (clip-path: inset(0 0 0 0)) and (filter: blur(5px)) {
  .m-article-header--feature .m-article-header__img {
    overflow: hidden;
  }

  .m-article-header--feature .m-article-header__img img,
  .m-article-header--feature .m-article-header__img video {
    left: -5px;
    right: -5px;
    bottom: -5px;
    width: calc(100% + 10px);
    height: calc(100% + 5px);
  }

  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] img,
  .m-article-header--feature .m-article-header__img[data-blur-img-dupe] video {
    filter: blur(5px);
  }
}

.m-article-header--feature .m-article-header__img::before {
  content: '';
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  height: 220px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,.05) 90%, rgba(0,0,0,0) 100%);

  @include breakpoint('small+') {
    height: 300px;
  }
}

.m-article-header--feature .m-article-header__img img,
.m-article-header--feature .m-article-header__img video {
  @include objectFitFix;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.m-article-header--feature .m-article-header__text {
  display: flex;
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  bottom: 0;
  flex-flow: column nowrap;
  justify-content: space-between;
  min-height: 152px;
  padding-bottom: 24px;

  @include breakpoint('small+') {
    min-height: 164px;
  }

  @include breakpoint('medium+') {
    min-height: 180px;
    padding-right: colspan(10,medium);
    padding-bottom: 28px;
  }

  @include breakpoint('large+') {
    padding-right: colspan(15, large);
    padding-left: colspan(15, large);
  }

  @include breakpoint('xlarge') {
    padding-right: colspan(15, xlarge);
    padding-left: colspan(15, xlarge);
  }
}

.m-article-header--feature .m-article-header__text::before {
  @include opaqueBg(rgba(0,0,0,.4), rgba(0,0,0,.25));
  content: '';
  position: absolute;
  z-index: -1;
  left: 50%;
  top: 0;
  bottom: 0;
  width: 100vw;
  margin-left: -50vw;
}

  .m-article-header--feature.m-article-header--editorial .m-article-header__text::before {
    @include opaqueBg(rgba($color__bg--editorial, .85), rgba($color__bg--editorial, .85));
  }
/* ... */

